--- a/README.html
+++ b/README.html
@@ -122,12 +122,12 @@ $(document).ready(function () {
 <h1>SCnorm</h1>
 <p>A quantile regression based approach for robust normalization of single cell RNA-seq data</p>
 <p>SCnorm is an R package which can be used to normalize single cell RNA-seq data.</p>
-<p>Details of SCnorm may be found in the vignette at:</p>
+<p>Details of SCnorm may be found in the vignette.</p>
 <div id="installation" class="section level2">
 <h2>Installation</h2>
 <p>To install the development version of SCnorm from Github:</p>
 <pre class="r"><code>library(devtools)
-devtools::install_github(&quot;rstatbacher/SCnorm&quot;, build_vignettes = TRUE)</code></pre>
+devtools::install_github(&quot;rhondabacher/SCnorm&quot;, build_vignettes = TRUE)</code></pre>
 </div>
 <div id="author" class="section level2">
 <h2>Author</h2>
